--- a/Concat_Addin/Concat_Addin.csproj
+++ b/Concat_Addin/Concat_Addin.csproj
@@ -156,7 +156,7 @@
     can be found.
   -->
   <ItemGroup>
-    <Compile Include="ColumnCleaner.cs" />
+    <Compile Include="Classes\ColumnCleaner.cs" />
     <Compile Include="Forms\frmConcat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -172,7 +172,7 @@
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Utilities.cs" />
+    <Compile Include="Classes\Utilities.cs" />
     <EmbeddedResource Include="Forms\frmConcat.resx">
       <DependentUpon>frmConcat.cs</DependentUpon>
     </EmbeddedResource>
