Moved the concat function out of the form and into its own class named Concat.

--- a/Concat_Addin/Concat_Addin.csproj
+++ b/Concat_Addin/Concat_Addin.csproj
@@ -157,6 +157,7 @@
   -->
   <ItemGroup>
     <Compile Include="Classes\ColumnCleaner.cs" />
+    <Compile Include="Classes\Concat.cs" />
     <Compile Include="Forms\frmConcat.cs">
       <SubType>Form</SubType>
     </Compile>
