--- a/Concat_Addin/Concat_Addin.csproj
+++ b/Concat_Addin/Concat_Addin.csproj
@@ -158,6 +158,7 @@
   <ItemGroup>
     <Compile Include="Classes\ColumnCleaner.cs" />
     <Compile Include="Classes\Concat.cs" />
+    <Compile Include="Classes\Ionito.cs" />
     <Compile Include="Forms\frmConcat.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -169,6 +170,12 @@
     </Compile>
     <Compile Include="Forms\frmHideColumns.Designer.cs">
       <DependentUpon>frmHideColumns.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\frmIonito.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\frmIonito.Designer.cs">
+      <DependentUpon>frmIonito.cs</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
